Added support for default enum literal in OpenAPI

--- a/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
@@ -211,6 +211,7 @@ components:
         - WEB
         # Literal "LEGACY_POS" is marked as deprecated. However OpenAPI does not support to mark literals as deprecated. 
         - LEGACY_POS
+      default: MOBILE
 
     # com.anaptecs.jeaf.junit.openapi.base.ChildA
     ChildA:
