--- a/jeaf-generator/.classpath
+++ b/jeaf-generator/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="jeaf-x-fun-api-1.5.23.jar"/>
+	<classpathentry kind="lib" path="jeaf-tools-api-1.5.23.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
