Added test project for Eclipse Papyrus UML Modelling Tool

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
 		<module>jeaf-generator-test-junit-testcases</module>
 		<module>jeaf-generator-test-open-api</module>
 		<module>jeaf-generator-test-open-api-service-objects</module>
+		<module>jeaf-generator-test-eclipse-papyrus</module>
 	</modules>
 
 </project>
