Added Maven module to test code generation for Spring

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
 		<module>jeaf-generator-test-open-api</module>
 		<module>jeaf-generator-test-open-api-service-objects</module>
 		<module>jeaf-generator-test-eclipse-papyrus</module>
+		<module>jeaf-generator-test-spring</module>
 	</modules>
 
 </project>
