Added generation of spring service interface and POJO without JEAF deps

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 		<jeaf.test.model.version>1.0.32-SNAPSHOT</jeaf.test.model.version>
 		
 		<jackson.version>2.13.1</jackson.version>
+		<validation-api.version>2.0.1.Final</validation-api.version>
 	</properties>
 
 	<modules>
