--- a/jeaf-generator-test-spring/pom.xml
+++ b/jeaf-generator-test-spring/pom.xml
@@ -13,6 +13,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>${validation-api.version}</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>com.anaptecs.jeaf.uml</groupId>
 			<artifactId>jeaf-uml-test-model</artifactId>
 			<version>${jeaf.test.model.version}</version>
@@ -53,12 +59,13 @@
 
 					<!-- Define whitelist of package in UML model generator should take care when generating code. -->
 					<packages>
-						<package>com.anaptecs.jeaf.accounting</package>
-						<package>com.anaptecs.jeaf.junit</package>
-						<package>TestProfile</package>
+						<package>com.anaptecs.spring</package>
 					</packages>
 
 					<!-- Define what should be generated. By default nothing is generated. -->
+					<targetRuntime>SPRING</targetRuntime>
+					<generateServiceInterfaces>true</generateServiceInterfaces>
+					<generatePOJOs>true</generatePOJOs>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
