--- a/jeaf-generator-test-open-api-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-service-objects/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.6.38</version>
+		<version>1.6.39-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test Open API Service Objects</name>
