JEAF-3073: Implemented default values for OpenAPI parameters

--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -135,6 +135,7 @@ paths:
           required: true
           schema:
             type: string
+            minLength: 1
             example: '1234-345'
       responses:
         '200':
