--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -53,7 +53,7 @@ paths:
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
@@ -88,8 +88,6 @@ paths:
         - Products
       operationId: createProduct
       requestBody:
-        description: >-
-          TODO Please add comment
         required: true
         content:
           application/json:
@@ -98,7 +96,7 @@ paths:
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
@@ -117,8 +115,6 @@ paths:
     head:
       operationId: ping
       responses:
-        '200':
-          description: Operation does not return any content.
         '400':
           $ref: '#/components/responses/CustomErrorResponse'
         'default':
@@ -133,8 +129,6 @@ paths:
       parameters:
         - name: id
           in: path
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: string
@@ -144,7 +138,7 @@ paths:
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
@@ -168,46 +162,36 @@ paths:
       parameters:
         - name: token
           in: header
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: string
         - name: lang
           in: header
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: string
             example: 'en'
         - name: reseller
           in: cookie
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: integer
             format: int64
         - name: id
           in: path
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: integer
             format: int64
         - name: q1
           in: query
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: string
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
@@ -226,8 +210,6 @@ paths:
     post:
       operationId: createChannelCode
       requestBody:
-        description: >-
-          TODO Please add comment
         required: true
         content:
           application/json:
@@ -241,7 +223,7 @@ paths:
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
@@ -272,7 +254,7 @@ paths:
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
@@ -293,38 +275,30 @@ paths:
       parameters:
         - name: token
           in: header
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: string
         - name: lang
           in: header
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: string
             example: 'en'
         - name: reseller
           in: cookie
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: integer
             format: int64
         - name: q1
           in: query
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: string
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
@@ -345,29 +319,21 @@ paths:
       parameters:
         - name: token
           in: header
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: string
         - name: lang
           in: header
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: string
         - name: q2
           in: query
-          description: >-
-            TODO Please add comment
           required: true
           deprecated: true
           schema:
             type: string
       responses:
-        '200':
-          description: Operation does not return any content.
         '400':
           $ref: '#/components/responses/CustomErrorResponse'
         'default':
@@ -379,8 +345,6 @@ paths:
       parameters:
         - name: param1
           in: header
-          description: >-
-            TODO Please add comment
           required: true
           deprecated: true
           schema:
@@ -389,7 +353,7 @@ paths:
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
@@ -409,8 +373,6 @@ paths:
     post:
       operationId: deprecatedBody
       requestBody:
-        description: >-
-          TODO Please add comment
         required: true
         content:
           application/json:
@@ -420,7 +382,7 @@ paths:
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
@@ -442,7 +404,7 @@ paths:
       operationId: deprectedComplexRequestBody
       requestBody:
         description: >-
-          TODO Please add comment
+          
           Operation has deprected body parameter. Please be aware that deprecations on complex bodies are not supported. Instead the whole operation needs to be set to deprecated.
         required: true
         content:
@@ -450,8 +412,6 @@ paths:
             schema:
               $ref: '../base/product-base.yml#/components/schemas/Product'
       responses:
-        '200':
-          description: Operation does not return any content.
         '400':
           $ref: '#/components/responses/CustomErrorResponse'
         'default':
@@ -463,7 +423,7 @@ paths:
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
             Operation has deprected return type. Please be aware that deprecations on complex return types are not supported. Instead the whole operation needs to be set to deprecated.
           content:
             application/json:
@@ -485,52 +445,38 @@ paths:
       parameters:
         - name: specificHeader
           in: header
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: string
         - name: token
           in: header
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: string
         - name: lang
           in: header
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: string
             example: 'en'
         - name: reseller
           in: cookie
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: integer
             format: int64
         - name: id
           in: path
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: integer
             format: int64
         - name: q1
           in: query
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: string
       responses:
-        '200':
-          description: Operation does not return any content.
         '400':
           $ref: '#/components/responses/CustomErrorResponse'
         'default':
@@ -577,8 +523,6 @@ paths:
         - B Tag
       operationId: addCurrencies
       requestBody:
-        description: >-
-          TODO Please add comment
         required: true
         content:
           application/json:
@@ -597,7 +541,7 @@ paths:
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
@@ -627,8 +571,6 @@ paths:
         - Another Tag
       operationId: isCurrencySupported
       requestBody:
-        description: >-
-          TODO Please add comment
         required: true
         content:
           application/json:
@@ -644,7 +586,7 @@ paths:
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
@@ -670,8 +612,6 @@ paths:
     post:
       operationId: testCodeTypeUsage
       requestBody:
-        description: >-
-          TODO Please add comment
         required: true
         content:
           application/json:
@@ -680,7 +620,7 @@ paths:
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
@@ -704,7 +644,7 @@ paths:
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
@@ -728,7 +668,7 @@ paths:
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
@@ -753,7 +693,7 @@ paths:
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
@@ -772,8 +712,6 @@ paths:
     post:
       operationId: checkIBAN
       requestBody:
-        description: >-
-          TODO Please add comment
         required: true
         content:
           application/json:
@@ -783,7 +721,7 @@ paths:
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
@@ -804,8 +742,6 @@ paths:
       parameters:
         - name: channelTypes
           in: query
-          description: >-
-            TODO Please add comment
           schema:
             type: array
             default: [MOBILE]
@@ -822,7 +758,7 @@ paths:
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
@@ -846,8 +782,6 @@ paths:
       parameters:
         - name: channelType
           in: query
-          description: >-
-            TODO Please add comment
           required: true
           schema:
             type: string
@@ -863,7 +797,7 @@ paths:
       responses:
         '200':
           description: >-
-            TODO Please add comment
+            TODO: Please add comment for response
           content:
             application/json:
               schema:
