Additional test for renaming

--- a/jeaf-generator-test-eclipse-papyrus/pom.xml
+++ b/jeaf-generator-test-eclipse-papyrus/pom.xml
@@ -82,10 +82,9 @@
 
 					<!-- Define whitelist of package in UML model generator should take care when generating code. -->
 					<packages>
-						<package>com.anaptecs.jeaf.</package>
-						<package>com.anaptecs.jeaf.</package>
-						<package>ch.</package>
-						<package>org.uic.</package>
+						<package>com.anaptecs.jeaf</package>
+						<package>ch</package>
+						<package>org.uic</package>
 						<package>TestProfile</package>
 					</packages>
 
