--- a/jeaf-generator-test-eclipse-papyrus/src-gen/main/resources/inventory-booking-api.yaml
+++ b/jeaf-generator-test-eclipse-papyrus/src-gen/main/resources/inventory-booking-api.yaml
@@ -1051,7 +1051,7 @@ components:
             (e.g., using HTML).
           type: string
           format: uri
-          default: "about:blank"
+          default: 'about:blank'
           example: 'https://example.com/warns/price-updated'
         detail:
           description: >-
@@ -1085,7 +1085,7 @@ components:
             (e.g., using HTML).
           type: string
           format: uri
-          default: "about:blank"
+          default: 'about:blank'
           example: 'https://example.com/probs/passenger-too-young'
         title:
           description: >-
