Library versions are now taken from parent POM, security update for MOJO executor

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf</groupId>
 		<artifactId>jeaf-plugin-project-parent</artifactId>
-		<version>1.0.26</version>
+		<version>1.0.27-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.anaptecs.jeaf.generator</groupId>
@@ -36,12 +36,6 @@
 		<jeaf.json.api.version>1.6.8</jeaf.json.api.version>
 		<jeaf.json.impl.version>1.6.9</jeaf.json.impl.version>
 		<jeaf.test.model.version>1.0.34-SNAPSHOT</jeaf.test.model.version>
-		
-		<jackson.version>2.13.1</jackson.version>
-		<validation-api.version>2.0.1.Final</validation-api.version>
-		<apache.poi.version>5.2.2</apache.poi.version>
-		<apache.commons.io.version>2.11.0</apache.commons.io.version>
-		<xml.unit.version>2.7.0</xml.unit.version>
 	</properties>
 
 	<modules>
