--- a/jeaf-generator-test-eclipse-papyrus/src-gen/main/resources/masterdata/inventory-masterdata-api.yaml
+++ b/jeaf-generator-test-eclipse-papyrus/src-gen/main/resources/masterdata/inventory-masterdata-api.yaml
@@ -280,6 +280,11 @@ components:
       description: >-
         Coarse grained categorization of the product type. Used to determine the type of an
         Offer (see "OfferPartType").
+        Valid Values:
+        - ADMISSION
+        - RESERVATION
+        - ANCILLARY
+        - FEE
       type: string
       enum:
         - ADMISSION
@@ -353,6 +358,11 @@ components:
     ServiceClassType:
       description: >-
         Type of quality level, finer grained than the comfort class.
+        Known Values:
+        - BEST
+        - HIGH
+        - STANDARD
+        - BASIC
       type: string
       x-extensible-enum:
         - BEST
@@ -364,6 +374,13 @@ components:
     FulfillmentMediaType:
       description: >-
         Fulfillment types. RCT2, RCCST and UIC-PDF are official UIC standards.
+        Known Values:
+        - RCT2
+        - RCCST
+        - UIC_PDF
+        - PDF_A4
+        - PKPASS
+        - TICKETLESS
       type: string
       x-extensible-enum:
         - RCT2
